# serial-terminal-rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: main.rs
